@@ -46,7 +46,7 @@ set 16knode_block_cnt 8
 set 32knode_block_cnt 8
 
 # job paramters
-set sleep_time  2
+set sleep_time  5
 
 print_header $test_id
 
